--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devserver": "webpack serve"
   },
   "author": "",
   "license": "ISC",
@@ -23,15 +24,19 @@
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.0.5",
+    "@solana/web3.js": "^1.91.2",
     "assert": "^2.1.0",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^6.1.5",
     "buffer": "^6.0.3",
     "ethereumjs-util": "^7.1.5",
+    "hash160": "^0.0.4",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "secp256k1": "^5.0.0",
+    "solana": "^1.0.7-development",
     "stream": "^0.0.2"
   }
 }
