--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
     "buffer": "^6.0.3",
+    "ed25519-hd-key": "^1.3.0",
     "ethereumjs-util": "^7.1.5",
     "hash160": "^0.0.4",
     "jquery": "^3.7.1",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "secp256k1": "^5.0.0",
     "solana": "^1.0.7-development",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "tweetnacl": "^1.0.3"
   }
 }
