--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ethereumjs-util": "^7.1.5",
     "hash160": "^0.0.4",
     "jquery": "^3.7.1",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "secp256k1": "^5.0.0",
