--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "devserver": "webpack serve"
+    "build": "webpack build",
+    "start": "webpack-dev-server --mode development --stats-children --stats-error-details --devtool inline-source-map --output-pathinfo"
   },
   "author": "",
   "license": "ISC",
