--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"noEmitOnError": true,
 		"target": "es5",
 		"watch": true,
-		"jsx": "react"
+		"jsx": "react",
+		"strictNullChecks": true
 	}
 }
