--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack build",
-    "start": "webpack-dev-server --mode development --stats-children --stats-error-details --devtool inline-source-map --output-pathinfo"
+    "build": "webpack build --mode production",
+    "dev-server": "webpack-dev-server --mode development --stats-children --stats-error-details --devtool inline-source-map --output-pathinfo"
   },
   "author": "",
   "license": "ISC",
